# l2dkp

./: .gitignore  README.md  pyproject.toml  tox.ini
frontend/: README.md  next.config.js  package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/app/(root)/: layout.tsx  page.jsx
frontend/app/(root)/auth/login/: page.tsx
frontend/app/(root)/auth/register/: page.tsx
frontend/app/(root)/auth/signin/: page.tsx
frontend/app/(root)/auth/signup/: page.tsx
frontend/app/(root)/components/: AppBar.tsx  Menu.tsx
frontend/app/(root)/members/: page.tsx
frontend/app/(root)/members/components/: ReadOnlyRow.tsx  types.ts
frontend/app/(root)/raids/: page.tsx
frontend/app/(root)/raids/components/: EditableRow.tsx  ReadOnlyRow.tsx  types.ts
frontend/app/components/: EditableRow.tsx  Menu.tsx  ProtectedLink.tsx  RaidsTable.tsx  ReadOnlyRow.tsx  RouteGuard.tsx
frontend/redux/: store.ts
frontend/redux/actions/: auth.ts
frontend/redux/features/: authSlice.ts
frontend/redux/services/: membersApi.ts  raidsApi.ts
l2dkp/: app.py  static  utils.py
l2dkp/app/: config.py  local.db  main.py  models.py  static
l2dkp/app/routers/: v1.py
l2dkp/app/routers/auth/: models.py  v1.py
l2dkp/app/routers/members/: models.py  v1.py
l2dkp/app/routers/raids/: models.py  v1.py
